# MC_opengl

./: 3DCubes.vcxproj  3DCubes.vcxproj.filters  BlockDatabase.cpp  BlockDatabase.h  BlockType.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h  ChunkRenderer.cpp  ChunkRenderer.h  CubePreviewFragment.fs  CubePreviewVertex.vs  Inventory.cpp  Inventory.h  KeyInput.cpp  KeyInput.h  OBJLoader.h  Player.cpp  Player.h  README.md  RenderInfo.h  RenderMaster.cpp  RenderMaster.h  Sky.cpp  Sky.h  SkyRenderer.cpp  SkyRenderer.h  TerrainGenerator.cpp  TerrainGenerator.h  UI.cpp  UI.h  UIFragment.fs  UIRenderer.cpp  UIRenderer.h  (+8 more)
App/: App.cpp  App.h
Debug/: vc142.idb
Debug/engine v0.01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  engine v0.01.lastbuildstate  link.command.1.tlog
Renderer/: Renderer.cpp  Renderer.h
Shader/: Shader.cpp  Shader.h  SimpleFragment.fs  SimpleVertex.vs
Texture/: Texture.cpp  Texture.h
x64/Debug/: 3DCubes.exe.recipe  3DCubes.ilk  vc142.idb
x64/Debug/3DCubes.tlog/: 3DCubes.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
